Реализовал классы отвечающие за загрузку словарей и нормализацию словаря, используемого для игры.